# tictactoe-cpp

./: CMakeLists.txt  LICENSE  README.md
src/: board.cpp  board.hpp  board_formatter.cpp  board_formatter.hpp  console.cpp  console.hpp  game.cpp  game.hpp  human_player.cpp  human_player.hpp  main.cpp  marker.cpp  marker.hpp  rules.cpp  rules.hpp
src/board/: board.cpp  board.hpp  board_formatter.cpp  board_formatter.hpp
src/game/: game.cpp  game.hpp  game_setup.cpp  game_setup.hpp
src/player/: computer_player.cpp  computer_player.hpp  human_player.cpp  human_player.hpp  player.hpp
test/: board_formatter_test.cpp  board_test.cpp  console_test.cpp  game_test.cpp.cpp  human_player_test.cpp  rules_test.cpp
test/board/: board_formatter_test.cpp  board_test.cpp
test/game/: game_setup_test.cpp  game_test.cpp
test/player/: computer_player_test.cpp  human_player_test.cpp
